--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,11 @@
     <groupId>com.mycompany.app</groupId>
     <artifactId>myblog</artifactId>
     <version>1</version>
+    <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
