DRAFT model, service, dao

--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,11 @@
             <version>6.2.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.36</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
